@@ -1302,10 +1302,10 @@ int info_main(int argc, char *argv[], void *userdata) {
         STRV_FOREACH(p, arg_devices) {
                 _cleanup_(sd_device_unrefp) sd_device *device = NULL;
 
-                r = find_device(*p, NULL, &device);
+                r = find_device(*p, /* prefix = */ NULL, &device);
                 if (r < 0) {
                         if (r == -EINVAL)
-                                log_error_errno(r, "Bad argument \"%s\", expected an absolute path in /dev/ or /sys/ or a unit name: %m", *p);
+                                log_error_errno(r, "Bad argument \"%s\", expected an absolute path in /dev/ or /sys/, device ID, or a unit name: %m", *p);
                         else
                                 log_error_errno(r, "Unknown device \"%s\": %m",  *p);
 
